Fixed invisible placeholder

--- a/ui/src/app/shared/components/search-user/search-user.component.scss
+++ b/ui/src/app/shared/components/search-user/search-user.component.scss
@@ -29,6 +29,10 @@
       color: $primaryTextColor;
       opacity: 1;
     }
+
+    &::placeholder {
+      color: $secondaryTextColor;
+    }
   }
   .search-icon {
     cursor: pointer;
